Revert "adding to heroku"
This reverts commit d57034835c8aa824b90a62ec8a5b0850d99eb0de.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest",
-    "start": "server.js"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
