--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^27.0.2",
     "@types/selenium-webdriver": "^4.0.16",
     "chromedriver": "^98.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "geckodriver": "^2.0.4",
     "jest": "^27.3.1",
